# mcpscan

./: .gitignore  MCPSCAN_SPEC.md  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
src/mcpscan/: __init__.py  cli.py  collectors.py  engine.py  models.py
src/mcpscan/parsers/: __init__.py  mcp_config.py  python_source.py  skill_md.py
src/mcpscan/reporters/: __init__.py  json_reporter.py  sarif_reporter.py  terminal.py
src/mcpscan/rules/: __init__.py
src/mcpscan/rules/builtin/: mcp101_instruction_override.yaml  mcp103_always_include_data.yaml  mcp104_long_description.yaml  mcp105_cross_tool_reference.yaml  mcp210_permissive_flags.yaml  mcp211_filesystem_root.yaml  mcp302_url_credentials.yaml  mcp401_curl_pipe_sh.yaml  mcp402_unpinned_pip.yaml
src/mcpscan/rules/checks/: __init__.py  ast_checks.py  secrets.py  unicode_hidden.py
tests/: conftest.py  test_ast_checks.py  test_cli.py  test_collectors.py  test_parsers.py  test_reporters.py  test_rules_yaml.py  test_secrets.py  test_unicode_hidden.py
tests/fixtures/clean_server/: mcp.json  server.py
tests/fixtures/vulnerable_server/: claude_desktop_config.json  server.py
tests/fixtures/vulnerable_skill/: SKILL.md
