[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcpscan"
version = "0.1.0"
description = "Static security scanner for MCP servers and AI agent skills"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "mcpscan contributors" }]
keywords = ["mcp", "security", "scanner", "prompt-injection", "ai-agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.scripts]
mcpscan = "mcpscan.cli:app"

[project.urls]
Homepage = "https://github.com/mcpscan/mcpscan"

[tool.hatch.build.targets.wheel]
packages = ["src/mcpscan"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.coverage.run]
source = ["src/mcpscan"]
